# Payday3-Internal

./: .gitignore  CMakeLists.txt  LINKER_ERROR_FIX.md  README.md  build-linux.sh  patch-sdk-for-linux.sh
UnrealSDKBase/: Cheat.cpp  main.cpp
UnrealSDKBase/SDK/: BasicTypes_Package.cpp  CoreUObject_Package.cpp  Engine_Package.cpp  Main_Package.cpp
cmake/: clang-cl-windows.cmake  linux.cmake  msvc-windows.cmake
src/: main.cpp  pch.h
src/core/console/: Console.cpp  Console.hpp
src/core/hooking/: Dx12Hook.cpp  Dx12Hook.hpp
src/core/logging/: Logcolor.hpp  Logging.cpp  Logging.hpp
src/core/render/: Drawings.cpp  Drawings.hpp  includes.h
src/game/features/esp/: ESP.cpp  ESP.hpp
src/game/features/noclip/: NoClip.cpp  NoClip.hpp
src/game/frontend/: Menu.cpp  Menu.hpp
src/types/gameoffsets/: DumperAssertsFix.hpp  SDK.hpp  UnrealContainers.hpp
src/types/gameoffsets/SDK/: ABP_AIArmedLinkedAnimation_classes.hpp  ABP_AIArmedLinkedAnimation_functions.cpp  ABP_AIArmedLinkedAnimation_parameters.hpp  ABP_AICivilianLinkedAnimation_classes.hpp  ABP_AICivilianLinkedAnimation_functions.cpp  ABP_AICivilianLinkedAnimation_parameters.hpp  ABP_AICrewLinkedAnimation_classes.hpp  ABP_AICrewLinkedAnimation_functions.cpp  ABP_AICrewLinkedAnimation_parameters.hpp  ABP_Car_Base_classes.hpp  ABP_Car_Base_functions.cpp  ABP_Car_Base_parameters.hpp  ABP_Charm_Base_Flat_classes.hpp  ABP_Charm_Base_Flat_functions.cpp  ABP_Charm_Base_Flat_parameters.hpp  ABP_Charm_Base_classes.hpp  ABP_Charm_Base_functions.cpp  ABP_Charm_Base_parameters.hpp  ABP_DeadBody_classes.hpp  ABP_DeadBody_functions.cpp  ABP_DeadBody_parameters.hpp  ABP_Delivery_Drone_classes.hpp  ABP_Delivery_Drone_functions.cpp  ABP_Delivery_Drone_parameters.hpp  ABP_DoctorBag_EQP_classes.hpp  ABP_DoctorBag_EQP_functions.cpp  ABP_DoctorBag_EQP_parameters.hpp  ABP_FPPlayerBase_classes.hpp  ABP_FPPlayerBase_functions.cpp  ABP_FPPlayerBase_parameters.hpp  ABP_HandCuffsAnimation_classes.hpp  ABP_HandCuffsAnimation_functions.cpp  ABP_HandCuffsAnimation_parameters.hpp  ABP_Helicopter_classes.hpp  ABP_Helicopter_functions.cpp  ABP_Helicopter_parameters.hpp  ABP_Moon_Assault_classes.hpp  ABP_Moon_Assault_functions.cpp  ABP_Moon_Assault_parameters.hpp  ABP_Placeable_SentryGun_classes.hpp  (+3154 more)
